--- a/bundle.yaml
+++ b/bundle.yaml
@@ -1,8 +1,12 @@
 apiVersion: "1"
-version: "1"
+version: "2"
 id: "EQ-Cloudbees-SG-ops-controller"
 description: "CloudBees CI configuration bundle for the EQ-Cloudbees-SG ops-controller Controller"
 jcasc:
   - "jenkins.yaml"
 plugins:
   - "plugins.yaml"
+catalog:
+  - "plugin-catalog.yaml"
+items:
+  - "items.yaml"
